# Combat-Simulator-RPG

./: .gitignore  CMakeLists.txt  Combat_Sim  README.md  notes.txt  test_item_db  warcraft_roguelike
src/: CMakeCache.txt  abilities.h  abilities_pool.h  armor.cpp  armor.h  battlesystem.cpp  battlesystem.h  consumable.cpp  consumable.h  entity.cpp  entity.h  equipslots.cpp  equipslots.h  inventory.cpp  inventory.h  item.cpp  item.h  lootitem.h  main  main.cpp  npc.h  npc_ai.cpp  npc_ai.h  player.cpp  player.h  pointwell.cpp  pointwell.h  statblock.cpp  statblock.h  statsmod.h  weapon.cpp  weapon.h
src/Loot/: armor_table.csv  base_item_table.csv  consumable_table.csv  container.h  enemy_loot_filler.h  gold.h  loot_context.h  lootable.h  lootable_value.h  master_loot_table.csv  rng.cpp  rng.h  table.h  weapon_table.csv
src/abilities/: abilities.cpp  abilities.h  abilities_pool.h
src/entities/: entity.cpp  entity.h  npc.cpp  npc.h  npc_ai.cpp  npc_ai.h  player.cpp  player.h  pointwell.h  statblock.cpp  statblock.h
src/items/: armor.cpp  armor.h  consumable.cpp  consumable.h  equipslots.cpp  equipslots.h  item.cpp  item.h  item_database.cpp  item_database.h  item_factory.cpp  item_factory.h  weapon.cpp  weapon.h
src/items/data/: armor_table.csv  base_item_table.csv  consumable_table.csv  weapon_table.csv
src/items/definitions/: armor_def.h  consumable_def.h  item_def.h  statsmod.h  weapon_def.h
src/loot/: container.h  enemy_loot_filler.cpp  enemy_loot_filler.h  gold.cpp  gold.h  loot_context.h  loot_filler.h  lootable.h  lootable_entry.h  lootable_value.cpp  lootable_value.h  rng.h  table.h
tests/: test_armor.cpp  test_enemy_loot_filler.cpp  test_entity.cpp  test_itemfactory.cpp  test_loot_table.cpp  test_lootable_value.cpp  test_pointwell.cpp  test_stat_block.cpp  test_weapon.cpp
